@@ -85,6 +85,10 @@
       <name>Sean Geoghegan</name>
     </contributor>
     <contributor>
+      <name>mjunginger</name>
+      <url>https://github.com/mjunginger</url>
+    </contributor>
+    <contributor>
       <name>Ashish Katyal</name>
     </contributor>
     <contributor>
